fix logo image link

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <header class="header">
         <div class="wrapper">
             <div class="header-content">
-                <img src="/images/logo.png" width="70" alt="logo">
+                <img src="./images/logo.png" width="70" alt="logo">
             <nav aria-label="main-navigation" class="menu">
             <ul>
                 <li><a class="is-active" href="#main">Hola</a></li>
@@ -117,7 +117,7 @@
 
             <div class="footer-content">
                 <div class="footer-logo">
-                    <img src="/images/logo.png" width="70" alt="logo">
+                    <img src="./images/logo.png" width="70" alt="logo">
         
                 </div>
         
