--- a/index.html
+++ b/index.html
@@ -53,6 +53,16 @@
             </div>
         </section>
 
+        <div class="datos">
+            <div>
+                <h2>A lo largo de mi carrera como Frontend, he tenido el privilegio de trabajar en proyectos retadores e increíbles</h2>
+                <p>Aquí hay algunos que me gustaría compartir.</p>
+            </div>
+            <div>
+                <img src="./images/arrow-down.svg" alt="">
+            </div>
+        </div>
+
         <div class="project" id="project">
             <div class="project-image">
                 <img src="./images/macbook.png" alt="Imagen del proyecto">
@@ -64,6 +74,16 @@
                     tus habilidades como desarrollador Front-End.</p>
                     <a href="#" class="button is-secondary">Código</a>
                     <a href="#" class="button">Proyecto</a>
+            </div>
+        </div>
+
+        <div class="testimony">
+            <div>
+                <img src="./images/usuario.png" alt="">
+            </div>
+            <div>
+                <h2>"Jaume ha sido de gran ayuda para acelerar ciertos esfuerzos de desarrollo. Lo que nos hubiera llevado 6 meses solo les llevó 1,5 meses ".</h2>
+                <p>LEONIDAS ESTEBAN / COFUNDADOR Y CEO LEONIDASESTEBAN.COM</p>
             </div>
         </div>
 
@@ -81,6 +101,16 @@
             </div>
         </div>
 
+        <div class="testimony">
+            <div>
+                <img src="./images/usuario2.png" alt="">
+            </div>
+            <div>
+                <h2>"Jaume ha superado mis expectativas desde el diseño hasta el desarrollo".</h2>
+                <p>JASON LOPEZ / COFUNDADOR Y CEO MARVOL</p>
+            </div>
+        </div>
+
         <div class="project">
             <div class="project-image pi">
                 <img src="./images/📱 Iphone X.png" alt="Imagen del proyecto">
@@ -91,6 +121,16 @@
                     tus habilidades como desarrollador Front-End.</p>
                     <a href="#" class="button is-secondary">Código</a>
                     <a href="#" class="button">Proyecto</a>
+            </div>
+        </div>
+
+        <div class="testimony">
+            <div>
+                <img src="./images/usuario3.png" alt="">
+            </div>
+            <div>
+                <h2>"Por primera vez en la historia de nuestra empresa, aparecimos en todas las plataformas en las que trabajamos".</h2>
+                <p>MARCO CORTEZ / NETNET</p>
             </div>
         </div>
 
