fix projects order

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             </div>
         </div>
 
-        <div class="project" id="project">
+        <div class="project p1" id="project">
             <div class="project-image">
                 <img src="./images/macbook.png" alt="Imagen del proyecto">
               
@@ -111,7 +111,7 @@
             </div>
         </div>
 
-        <div class="project">
+        <div class="project p1">
             <div class="project-image pi">
                 <img src="./images/📱 Iphone X.png" alt="Imagen del proyecto">
             </div>
